force-app/main/default/objects/Dependancy__c/Dependancy__c.object-meta.xml
<CustomObject>
    <description>Gantt Chart</description>
    <label>Dependancy</label>
    <nameField>
        <label>Dependancy Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>