force-app/main/default/objects/Dependancy__c/fields/Lag__c.field-meta.xml
<CustomField>
    <fullName>Lag__c</fullName>
    <label>Lag</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>