force-app/main/default/objects/Dependancy__c/fields/TaskForm__c.field-meta.xml
<CustomField>
    <fullName>TaskForm__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Task Form</label>
    <referenceTo>ProjectTask__c</referenceTo>
    <relationshipLabel>Dependancy</relationshipLabel>
    <relationshipName>Dependancy</relationshipName>
    <type>Lookup</type>
</CustomField>