force-app/main/default/objects/Dependancy__c/fields/TaskTo__c.field-meta.xml
<CustomField>
    <fullName>TaskTo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Task To</label>
    <referenceTo>ProjectTask__c</referenceTo>
    <relationshipLabel>Dependancy (Task To)</relationshipLabel>
    <relationshipName>Dependancy1</relationshipName>
    <type>Lookup</type>
</CustomField>