force-app/main/default/objects/Dependancy__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>